fixing horizontal scroll 2

--- a/_sass/elementaire/_layout.scss
+++ b/_sass/elementaire/_layout.scss
@@ -12,8 +12,7 @@
     "menu menu";
   margin-bottom: 2em;
 
-  &::before {
-    content: '';
+  &__background {
     position: absolute;
     top: 21%;
     left: 50%;
